# bytewax-clickhouse

./: .gitignore  README.md  clickhouse_connector.py  docker-compose.yaml  justfile  pyproject.toml  test_ch.py
.github/workflows/: CI.yml
docs/: conf.py
examples/: metrics.py
pytests/: test_ch.py
requirements/: build-py3.10.txt  build-py3.11.txt  build-py3.12.txt  build-py3.8.txt  build-py3.9.txt  build.in  dev.txt  doc.txt  lib-py3.10.txt  lib-py3.11.txt  lib-py3.12.txt  lib-py3.8.txt  lib-py3.9.txt  requirements.txt
src/bytewax/bytewax-clickhouse/: __init__.py  operators.py
src/bytewax/clickhouse/: __init__.py  operators.py
src/bytewax/connectors/: __init__.py
src/bytewax_clickhouse.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
